welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: not found: value asmile
  if (asmile==true &&  bsmile== true)||(asmile== false && bsmile== false){
      ^monkeyTrouble:2: error: not found: value bsmile
  if (asmile==true &&  bsmile== true)||(asmile== false && bsmile== false){
                       ^monkeyTrouble:2: error: not found: value ||
  if (asmile==true &&  bsmile== true)||(asmile== false && bsmile== false){
                                     ^monkeyTrouble:2: error: not found: value asmile
  if (asmile==true &&  bsmile== true)||(asmile== false && bsmile== false){
                                        ^monkeyTrouble:2: error: not found: value bsmile
  if (asmile==true &&  bsmile== true)||(asmile== false && bsmile== false){
                                                          ^